--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     --Medium-Grey: hsl(216, 12%, 54%);
     --Dark-Blue: hsl(213, 19%, 18%);
     --Very-Dark-Blue: hsl(216, 12%, 8%);
+    --Medium-Grey-Opacity: hsla(216, 12%, 54%, 0.3);
 }
 
 * {
@@ -19,4 +20,75 @@ body {
     box-sizing: border-box;
     height: 100vh;
     width: 100%;
+    background-color: var(--Very-Dark-Blue);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+main {
+    background-color: var(--Dark-Blue);
+    padding: 1.5rem;
+    margin: 0 1.5rem;
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.main__header {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+}
+
+h1 {
+    color: var(--White);
+    font-size: 2rem;
+    margin-bottom: -.5rem;
+    font-weight: 700;
+}
+
+.main__paragraph {
+    color: var(--Light-Grey);
+    font-size: .9rem;
+    font-weight: 400;
+}
+
+.icon__star {
+    background-color: var(--Medium-Grey-Opacity);
+    border-radius: 50%;
+    padding: .5rem;    
+}
+
+.section__number-buttons {
+    display: flex;
+    justify-content: space-evenly;
+    gap: .5rem;
+    padding-bottom: 1.5rem;
+}
+
+.section__number-buttons_button {
+    border: none;
+    background-color: var(--Medium-Grey-Opacity);
+    border-radius: 50%;
+    color: var(--Light-Grey);
+    padding: 1rem 1.5rem;
+
+    span {
+        font-size: 1.2rem;
+    }
+}
+
+.section__number-buttons_button:first-child {
+    width: 3.7rem;
+}
+
+[data-btn-submit] {
+    background-color: var(--Orange);
+    color: var(--White);
+    border-radius: 2rem;
+    border: none;
+    padding: .5rem;
+    font-size: 1.1rem;
 }
