--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ main {
     background-color: var(--Dark-Blue);
     padding: 1.5rem;
     margin: 0 1.5rem;
-    border-radius: 1rem;
+    border-radius: 1.5rem;
     display: flex;
     flex-direction: column;
 }
@@ -89,6 +89,23 @@ h1 {
     color: var(--White);
     border-radius: 2rem;
     border: none;
-    padding: .5rem;
+    padding: .7rem;
     font-size: 1.1rem;
+    letter-spacing: 2px;
+    font-weight: 700;
+}
+
+.section__number-buttons_button:hover {
+    background-color: var(--Medium-Grey);
+    color: var(--White);
+}
+
+.section__number-buttons_button:focus {
+    background-color: var(--Orange);
+    color: var(--White);
+}
+
+[data-btn-submit]:hover {
+    background-color: var(--White);
+    color: var(--Orange);
 }
