--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 :root {
-    --Orange: hsl(25, 97%, 53%);
-    --White: hsl(0, 0%, 100%);
-    --Light-Grey: hsl(217, 12%, 63%);
-    --Medium-Grey: hsl(216, 12%, 54%);
-    --Dark-Blue: hsl(213, 19%, 18%);
-    --Very-Dark-Blue: hsl(216, 12%, 8%);
-    --Medium-Grey-Opacity: hsla(216, 12%, 54%, 0.3);
+  --Orange: hsl(25, 97%, 53%);
+  --White: hsl(0, 0%, 100%);
+  --Light-Grey: hsl(217, 12%, 63%);
+  --Medium-Grey: hsl(216, 12%, 54%);
+  --Dark-Blue: hsl(213, 19%, 18%);
+  --Very-Dark-Blue: hsl(216, 12%, 8%);
+  --Medium-Grey-Opacity: hsla(216, 12%, 54%, 0.3);
 }
 
 * {
@@ -15,125 +15,147 @@
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    height: 100vh;
-    width: 100%;
-    background-color: var(--Very-Dark-Blue);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  height: 100vh;
+  width: 100%;
+  background-color: var(--Very-Dark-Blue);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 main {
-    background-color: var(--Dark-Blue);
-    padding: 1.5rem;
-    margin: 0 1.5rem;
-    border-radius: 1.5rem;
-    display: flex;
-    flex-direction: column;
+  background-color: var(--Dark-Blue);
+  padding: 1.5rem;
+  margin: 0 1.5rem;
+  border-radius: 1.5rem;
+  display: flex;
+  flex-direction: column;
 }
 
 .main__header {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
 }
 
 h1 {
-    color: var(--White);
-    font-size: 2rem;
-    margin-bottom: -.5rem;
-    font-weight: 700;
+  color: var(--White);
+  font-size: 2rem;
+  margin-bottom: -0.5rem;
+  font-weight: 700;
 }
 
 .main__paragraph {
-    color: var(--Light-Grey);
-    font-size: .9rem;
-    font-weight: 400;
+  color: var(--Light-Grey);
+  font-size: 0.9rem;
+  font-weight: 400;
 }
 
 .icon__star {
-    background-color: var(--Medium-Grey-Opacity);
-    border-radius: 50%;
-    padding: .5rem;    
+  background-color: var(--Medium-Grey-Opacity);
+  border-radius: 50%;
+  padding: 0.5rem;
 }
 
-.section__number-buttons {
-    display: flex;
-    justify-content: space-evenly;
-    gap: .5rem;
-    padding-bottom: 1.5rem;
+[data-form] {
+  display: grid;
+  grid-template-areas: 
+  "one two three four five"
+  "btn btn btn btn btn";
+  padding-bottom: 1.5rem;
+  gap: .5rem;
 }
 
 .section__number-buttons_button {
-    border: none;
-    background-color: var(--Medium-Grey-Opacity);
-    border-radius: 50%;
-    color: var(--Light-Grey);
-    padding: 1rem 1.5rem;
-    cursor: pointer;
-
-    span {
-        font-size: 1.2rem;
-    }
+  border: none;
+  background-color: var(--Medium-Grey-Opacity);
+  border-radius: 50%;
+  color: var(--Light-Grey);
+  padding: 1rem 1.5rem;
+  cursor: pointer;
+  font-size: 1.2rem;
+  
+}
+.number__one {
+    grid-area: one;
+}
+.number__two{
+grid-area: two;
+}
+.number__three{
+grid-area: three;
+}
+.number__four{
+grid-area: four;
+}
+.number__five{
+grid-area: five;
 }
 
 .section__number-buttons_button:first-child {
-    width: 3.7rem;
+  width: 3.7rem;
 }
 
 [data-btn-submit] {
-    background-color: var(--Orange);
-    color: var(--White);
-    border-radius: 2rem;
-    border: none;
-    padding: .7rem;
-    font-size: 1.1rem;
-    letter-spacing: 2px;
-    font-weight: 700;
-    cursor: pointer;
+  background-color: var(--Orange);
+  color: var(--White);
+  border-radius: 2rem;
+  border: none;
+  padding: 0.7rem;
+  font-size: 1.1rem;
+  letter-spacing: 2px;
+  font-weight: 700;
+  cursor: pointer;
+  grid-area: btn;
+  margin: 1.5rem 0 -1rem 0;
 }
 
 .section__number-buttons_button:hover {
-    background-color: var(--Medium-Grey);
-    color: var(--White);
+  background-color: var(--Medium-Grey);
+  color: var(--White);
 }
 
 .section__number-buttons_button:focus {
-    background-color: var(--Orange);
-    color: var(--White);
+  background-color: var(--Orange);
+  color: var(--White);
 }
 
 [data-btn-submit]:hover {
-    background-color: var(--White);
-    color: var(--Orange);
+  background-color: var(--White);
+  color: var(--Orange);
 }
 
 @media (min-width: 1440px) {
+  main {
+    max-width: 22.5%;
+    padding: 2.5rem;
+    align-items: start;
+    justify-content: space-evenly;
+  }
 
-    main {
-        width: 17%;
-        padding: 2.5rem;
-        align-items: start;
-        justify-content: space-evenly;
-    }
+  .icon__star {
+    padding: 1rem;
+  }
+  .main__paragraph {
+    font-size: 1rem;
+  }
 
-    .icon__star {
-        padding: 1rem;
-    }
-    .main__paragraph {
-        font-size: 1rem;
-    }
+  [data-form] {
+    gap: 0.8rem;
+    margin: 1rem 0;
+    width: 100%;
+  }
 
-    .section__number-buttons{
-        gap: .8rem;
-        margin: 1rem 0;
-    }
+  .section__number-buttons_button {
+    width: 3.7rem;
+  }
 
-    [data-btn-submit] {
-        width: 100%;
-    }
+  [data-btn-submit] {
+    width: 100%;
+    margin-bottom: -2rem;
+  }
 }
