--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ h1 {
   gap: .5rem;
 }
 
-.section__number-buttons_button {
+.form__input {
   border: none;
   background-color: var(--Medium-Grey-Opacity);
   border-radius: 50%;
@@ -78,7 +78,7 @@ h1 {
   padding: 1rem 1.5rem;
   cursor: pointer;
   font-size: 1.2rem;
-  
+ 
 }
 .number__one {
     grid-area: one;
@@ -96,7 +96,7 @@ grid-area: four;
 grid-area: five;
 }
 
-.section__number-buttons_button:first-child {
+.form__input:first-child {
   width: 3.7rem;
 }
 
@@ -114,12 +114,12 @@ grid-area: five;
   margin: 1.5rem 0 -1rem 0;
 }
 
-.section__number-buttons_button:hover {
+.form__input:hover {
   background-color: var(--Medium-Grey);
   color: var(--White);
 }
 
-.section__number-buttons_button:focus {
+.form__input:focus {
   background-color: var(--Orange);
   color: var(--White);
 }
@@ -139,9 +139,13 @@ grid-area: five;
 
   .icon__star {
     padding: 1rem;
+    width: 2rem;
+  }
+  h1 {
+    font-size: 2.5rem;
   }
   .main__paragraph {
-    font-size: 1rem;
+    font-size: 1.3rem;
   }
 
   [data-form] {
@@ -150,7 +154,7 @@ grid-area: five;
     width: 100%;
   }
 
-  .section__number-buttons_button {
+  .form__input {
     width: 3.7rem;
   }
 
