--- a/css/thankyou.css
+++ b/css/thankyou.css
@@ -22,6 +22,7 @@ body {
     width: 100%;
     background-color: var(--Very-Dark-Blue);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -29,7 +30,7 @@ body {
 main {
     background-color: var(--Dark-Blue);
     padding: 1.5rem;
-    margin: 0 1.5rem;
+    margin: 1.5rem 1.5rem;
     border-radius: 1.5rem;
 }
 
@@ -62,6 +63,21 @@ h1 {
     margin: 0 0 1rem 0;
 }
 
+.attribution {
+    color: var(--White);
+    font-size: 1rem;
+    text-align: center;
+  
+    a {
+      text-decoration: none;
+      color: var(--Orange);
+    }
+  
+    a:hover {
+      color: var(--Light-Grey);
+    }
+  }
+
 @media (min-width: 1440px) {
     main {
         max-width: 30%;
@@ -82,5 +98,8 @@ h1 {
 
     .paragraph__thanks {
         font-size: 1.5rem;
+    }
+    .attribution {
+        font-size: 1.4rem;
     }
 }
