--- a/css/style.css
+++ b/css/style.css
@@ -63,11 +63,12 @@ h1 {
 
 [data-form] {
   display: grid;
-  grid-template-areas: 
-  "one two three four five"
-  "btn btn btn btn btn";
+  grid-template-areas:
+    "one two three four five"
+    "btn btn btn btn btn";
   padding-bottom: 1.5rem;
-  gap: .5rem;
+  gap: 0.5rem;
+  justify-content: space-between;
 }
 
 .form__input {
@@ -78,25 +79,24 @@ h1 {
   padding: 1rem 1.5rem;
   cursor: pointer;
   font-size: 1.2rem;
- 
 }
 .number__one {
-    grid-area: one;
+  grid-area: one;
 }
-.number__two{
-grid-area: two;
+.number__two {
+  grid-area: two;
 }
-.number__three{
-grid-area: three;
+.number__three {
+  grid-area: three;
 }
-.number__four{
-grid-area: four;
+.number__four {
+  grid-area: four;
 }
-.number__five{
-grid-area: five;
+.number__five {
+  grid-area: five;
 }
 
-.form__input:first-child {
+.form__input {
   width: 3.7rem;
 }
 
@@ -179,6 +179,6 @@ grid-area: five;
   }
 
   .attribution {
-      font-size: 1.4rem;
+    font-size: 1.4rem;
   }
 }
